--- a/.drone.yml
+++ b/.drone.yml
@@ -27,10 +27,9 @@ build:
       - IVY2=.ivy2
     commands:
       - sbt --warn -Dsbt.ivy.home=$IVY2 scalastyle compile doc
-      - sbt -Dsbt.ivy.home=$IVY2 coverage
-      - sbt -Dsbt.ivy.home=$IVY2 scalarxJVM/coverage scalarxJVM/test scalarxJVM/coverageReport || true
-      - sbt -Dsbt.ivy.home=$IVY2 selfrxJVM/coverage selfrxJVM/test selfrxJVM/coverageReport || true
-      - sbt -Dsbt.ivy.home=$IVY2 metrarxJVM/coverage metarxJVM/test metarxJVM/coverageReport || true
+      - sbt -Dsbt.ivy.home=$IVY2 coverage scalarxJVM/test scalarxJVM/coverageReport || true
+      - sbt -Dsbt.ivy.home=$IVY2 coverage selfrxJVM/test selfrxJVM/coverageReport || true
+      - sbt -Dsbt.ivy.home=$IVY2 coverage metarxJVM/test metarxJVM/coverageReport || true
       - sbt -Dsbt.ivy.home=$IVY2 coverageReport
       - sbt -Dsbt.ivy.home=$IVY2 coverageAggregate
   publish_coverage:
