update .drone.yml: more tests
scalarx, selfrx tests don't fail anymore -> check failure
since scalatest 3.0.0, js tests now also work -> also run them

--- a/.drone.yml
+++ b/.drone.yml
@@ -27,11 +27,12 @@ build:
       - IVY2=.ivy2
     commands:
       - sbt --warn -Dsbt.ivy.home=$IVY2 scalastyle compile doc
-      - sbt -Dsbt.ivy.home=$IVY2 coverage scalarxJVM/test scalarxJVM/coverageReport || true
-      - sbt -Dsbt.ivy.home=$IVY2 coverage selfrxJVM/test selfrxJVM/coverageReport || true
+      - sbt -Dsbt.ivy.home=$IVY2 coverage scalarxJVM/test scalarxJVM/coverageReport
+      - sbt -Dsbt.ivy.home=$IVY2 coverage selfrxJVM/test selfrxJVM/coverageReport
       - sbt -Dsbt.ivy.home=$IVY2 coverage metarxJVM/test metarxJVM/coverageReport || true
       - sbt -Dsbt.ivy.home=$IVY2 coverageReport
       - sbt -Dsbt.ivy.home=$IVY2 coverageAggregate
+      - sbt -Dsbt.ivy.home=$IVY2 scalarxJS/test selfrxJS/test
   publish_coverage:
     image: marmolata/scala-build
     when:
