--- a/.drone.yml
+++ b/.drone.yml
@@ -1,32 +1,19 @@
-clone:
-  skip_verify: true
+image: &image marmolata/scala-build
 
-notify:
-  slack:
-    webhook_url: https://hooks.slack.com/services/$$SLACK_TOKEN
-    channel: general
-    username: Drone-CI
-    when:
-      failure: true
-  email:
-    from: techologyoffice_ci@sap.com
-    host: mail.sap.corp
-    port: 25
+pipeline:
+  clone:
+    image: plugins/git
     skip_verify: true
-    when:
-      failure: true
-
-cache:
-  mount:
-    - .ivy2
-
-build:
-  make:
-    image: marmolata/scala-build
+    tags: true
+  cache-restore:
+    image: plugins/sftp-cache
+    restore: true
+  build:
+    image: *image
     environment:
       - IVY2=.ivy2
     commands:
-      - sbt --warn -Dsbt.ivy.home=$IVY2 scalastyle compile doc
+      - sbt -Dsbt.ivy.home=$IVY2 scalastyle compile doc
       - sbt -Dsbt.ivy.home=$IVY2 coverage scalarxJVM/test scalarxJVM/coverageReport
       - sbt -Dsbt.ivy.home=$IVY2 coverage selfrxJVM/test selfrxJVM/coverageReport
       - sbt -Dsbt.ivy.home=$IVY2 metarxJVM/test:compile
@@ -35,77 +22,78 @@ build:
       - sbt -Dsbt.ivy.home=$IVY2 coverageReport
       - sbt -Dsbt.ivy.home=$IVY2 coverageAggregate
       - sbt -Dsbt.ivy.home=$IVY2 scalarxJS/test selfrxJS/test
-  publish_coverage:
-    image: marmolata/scala-build
+  cloc:
+    image: marmolata/drone-plugin-cloc
+  # publish_coverage:
+  #   image: *image
+  #   when:
+  #     branch: [dev, master]
+  #     event: push
+  #   commands:
+  #     - export BASE=/var/www/coverage/${CI_REPO##*/}
+  #     - ssh core@mo-4249591b5.mo.sap.corp mkdir -p "${BASE}/${CI_BUILD_NUMBER}" "${BASE}/latest"
+  #     - rsync -aqSD --ignore-errors --force --delete target/scala-2.10/scoverage-report/ core@mo-4249591b5.mo.sap.corp:"${BASE}/${CI_BUILD_NUMBER}"
+  #     - ssh core@mo-4249591b5.mo.sap.corp "rsync -aqSD --ignore-errors --force --delete ${BASE}/\`ls $BASE | sort -rn | head -n 1\`/ ${BASE}/latest"
+  # publish_test:
+  #   image: *image
+  #   when:
+  #     branch: [dev, master]
+  #     event: push
+  #   commands:
+  #     - export BASE=/var/www/test-reports/${CI_REPO##*/}
+  #     - ssh core@mo-4249591b5.mo.sap.corp mkdir -p "${BASE}/${CI_BUILD_NUMBER}" "${BASE}/latest"
+  #     - rsync -aqSD --ignore-errors --force --delete target/test-reports/ core@mo-4249591b5.mo.sap.corp:"${BASE}/${CI_BUILD_NUMBER}"
+  #     - ssh core@mo-4249591b5.mo.sap.corp "rsync -aqSD --ignore-errors --force --delete ${BASE}/\`ls $BASE | sort -rn | head -n 1\`/ ${BASE}/latest"
+  # publish_documentation:
+  #   image: *image
+  #   environment:
+  #     - IVY2=.ivy2
+  #   volumes:
+  #     - /var/www/:/var/www/
+  #   commands:
+  #     - export BASE=/var/www/documentation/${CI_REPO##*/}
+  #     - export JS=${BASE}/js JVM=${BASE}/jvm
+  #     - mkdir -p "${JS}/${CI_BUILD_NUMBER}" "${JVM}/${CI_BUILD_NUMBER}" "${BASE}/jvm-latest" "${BASE}/jvm-latest"
+  #     - cp -ar core/js/target/scala-2.11/api/ "${JS}/${CI_BUILD_NUMBER}"
+  #     - cp -ar core/jvm/target/scala-2.11/api/ "${JVM}/${CI_BUILD_NUMBER}"
+  #     - rsync -aqSD --ignore-errors --force --delete "${JVM}/`ls $JVM | sort -rn | head -n 1`/api/" "${BASE}/jvm-latest"
+  #     - rsync -aqSD --ignore-errors --force --delete "${JS}/`ls $JS | sort -rn | head -n 1`/api/" "${BASE}/js-latest"
+  #   # TODO: when to link latest?
+  #   # when:
+  #   #   event: tag
+  #   #   branch: master
+  # publish_checkstyle:
+  #   image: *image
+  #   environment:
+  #     - IVY2=.ivy2
+  #   volumes:
+  #     - /var/www/:/var/www/
+  #   commands:
+  #     - export BASE=/var/www/checkstyle/${CI_REPO##*/}
+  #     # TODO: aggregate into one report
+  #     - |
+  #       for CHECK in `find . -name scalastyle-result.xml`;
+  #       do
+  #         TARGET="${BASE}/${CI_BUILD_NUMBER}/`echo ${CHECK} | sed -e 's/^.\///' -e 's/\/target//' -e 's/.xml$//' -e 's/\//-/g'`"
+  #         mkdir -p `dirname "${TARGET}"`
+  #         xsltproc /root/contribution/xsl/checkstyle-noframes.xsl "${CHECK}" > "${TARGET}.html"
+  #       done
+  #     - rsync -aqSD --ignore-errors --force --delete "$BASE/`ls $BASE | sort -rn | head -n 1`/" "$BASE/latest"
+  #   # TODO: when to link latest?
+  #   # when:
+  #   #   event: tag
+  #   #   branch: master
+  cache-rebuild:
+    image: plugins/sftp-cache
+    rebuild: true
+  slack:
+    image: plugins/slack
     when:
-      branch: [dev, master]
-      event: push
-    commands:
-      - export BASE=/var/www/coverage/${CI_REPO##*/}
-      - ssh core@mo-4249591b5.mo.sap.corp mkdir -p "${BASE}/${CI_BUILD_NUMBER}" "${BASE}/latest"
-      - rsync -aqSD --ignore-errors --force --delete target/scala-2.10/scoverage-report/ core@mo-4249591b5.mo.sap.corp:"${BASE}/${CI_BUILD_NUMBER}"
-      - ssh core@mo-4249591b5.mo.sap.corp "rsync -aqSD --ignore-errors --force --delete ${BASE}/\`ls $BASE | sort -rn | head -n 1\`/ ${BASE}/latest"
-  publish_test:
-    image: marmolata/scala-build
-    when:
-      branch: [dev, master]
-      event: push
-    commands:
-      - export BASE=/var/www/test-reports/${CI_REPO##*/}
-      - ssh core@mo-4249591b5.mo.sap.corp mkdir -p "${BASE}/${CI_BUILD_NUMBER}" "${BASE}/latest"
-      - rsync -aqSD --ignore-errors --force --delete target/test-reports/ core@mo-4249591b5.mo.sap.corp:"${BASE}/${CI_BUILD_NUMBER}"
-      - ssh core@mo-4249591b5.mo.sap.corp "rsync -aqSD --ignore-errors --force --delete ${BASE}/\`ls $BASE | sort -rn | head -n 1\`/ ${BASE}/latest"
-  publish_documentation:
-    image: marmolata/scala-build
-    environment:
-      - IVY2=.ivy2
-    volumes:
-      - /var/www/:/var/www/
-    commands:
-      - export BASE=/var/www/documentation/${CI_REPO##*/}
-      - export JS=${BASE}/js JVM=${BASE}/jvm
-      - mkdir -p "${JS}/${CI_BUILD_NUMBER}" "${JVM}/${CI_BUILD_NUMBER}" "${BASE}/jvm-latest" "${BASE}/jvm-latest"
-      - cp -ar core/js/target/scala-2.11/api/ "${JS}/${CI_BUILD_NUMBER}"
-      - cp -ar core/jvm/target/scala-2.11/api/ "${JVM}/${CI_BUILD_NUMBER}"
-      - rsync -aqSD --ignore-errors --force --delete "${JVM}/`ls $JVM | sort -rn | head -n 1`/api/" "${BASE}/jvm-latest"
-      - rsync -aqSD --ignore-errors --force --delete "${JS}/`ls $JS | sort -rn | head -n 1`/api/" "${BASE}/js-latest"
-    # TODO: when to link latest?
-    # when:
-    #   event: tag
-    #   branch: master
-  publish_checkstyle:
-    image: marmolata/scala-build
-    environment:
-      - IVY2=.ivy2
-    volumes:
-      - /var/www/:/var/www/
-    commands:
-      - export BASE=/var/www/checkstyle/${CI_REPO##*/}
-      # TODO: aggregate into one report
-      - |
-        for CHECK in `find . -name scalastyle-result.xml`;
-        do
-          TARGET="${BASE}/${CI_BUILD_NUMBER}/`echo ${CHECK} | sed -e 's/^.\///' -e 's/\/target//' -e 's/.xml$//' -e 's/\//-/g'`"
-          mkdir -p `dirname "${TARGET}"`
-          xsltproc /root/contribution/xsl/checkstyle-noframes.xsl "${CHECK}" > "${TARGET}.html"
-        done
-      - rsync -aqSD --ignore-errors --force --delete "$BASE/`ls $BASE | sort -rn | head -n 1`/" "$BASE/latest"
-    # TODO: when to link latest?
-    # when:
-    #   event: tag
-    #   branch: master
-  publish_artifact:
-    image: marmolata/scala-build:latest
-    environment:
-      - IVY2=.ivy2
-    commands:
-      - sbt --warn 'set credentials += Credentials("Sonatype Nexus Repository Manager", "nexus.wdf.sap.corp", $$NEXUS_USER_MILESTONES, $$NEXUS_PASSWORD_MILESTONES' 'set version:=$$TAG' publish
-    when:
-      event: tag
-      branch: master
-publish:
-  coverage:
-     token: 929ecd6749c02137749859205788389ebbf0e883
-     server: http://mo-4249591b5.mo.sap.corp:8001
-     include: lcov.info
-
+      change: true
+  # email:
+  #   from: techologyoffice_ci@sap.com
+  #   host: mail.sap.corp
+  #   port: 25
+  #   skip_verify: true
+  #   when:
+  #     change: true
