--- a/.drone.yml
+++ b/.drone.yml
@@ -1,4 +1,4 @@
-image: &image marmolata/scala-build
+image: &image marmolata-registry.mo.sap.corp/marmolata/build.scala_2.11.openjdk8:latest
 
 pipeline:
   clone:
@@ -23,7 +23,7 @@ pipeline:
       - sbt -Dsbt.ivy.home=$IVY2 coverageAggregate
       - sbt -Dsbt.ivy.home=$IVY2 scalarxJS/test selfrxJS/test
   cloc:
-    image: marmolata/drone-plugin-cloc
+    image: marmolata-registry.mo.sap.corp/marmolata/drone-plugin-cloc
   # publish_coverage:
   #   image: *image
   #   when:
